feat: Enhance mobile UX and social sharing with native integration
Comprehensive mobile experience improvements with enhanced social sharing functionality including native device integration and responsive design optimizations.

Reason:
• Poor mobile button layout causing usability issues on touch devices
• Lack of social sharing functionality limiting educational content distribution
• Missing native share API integration for modern mobile experiences
• Inconsistent responsive design across different screen sizes

Impact:
• Significantly improved mobile user experience with touch-friendly interfaces
• Enhanced educational content sharing capabilities across social platforms
• Better accessibility with keyboard navigation and screen reader support
• Increased user engagement through seamless sharing workflows
• Modern PWA-like experience with native device integration

Changes:
• Enhanced mobile button layouts with proper touch targets (min 48px)
• Added comprehensive social sharing modal with Twitter, LinkedIn, Reddit support
• Implemented native Web Share API with automatic device detection
• Improved responsive design for tablets and mobile devices
• Added share button with dynamic visibility based on content
• Enhanced URL input interface with integrated copy functionality
• Updated CSS with mobile-first responsive breakpoints
• Added keyboard shortcuts and accessibility improvements

Technical Enhancements:
• Native Share API detection and fallback mechanisms
• Event listener delegation for secure event handling
• Enhanced CSS Grid layouts for responsive button arrangements
• Improved modal system with proper focus management
• URL parameter handling for direct phrase sharing

Files Modified:
• css/main.css - Mobile button layouts and share button styling
• css/modal.css - Enhanced modal design with responsive improvements
• css/phrase-suggestions.css - Mobile-optimized suggestion buttons
• js/main.js - Social sharing implementation and native API integration
•

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="twitter:image" content="https://dhruvinrsoni.github.io/cipher-alchemist/assets/icons/favicon-512.png" />    <!-- Modular CSS Files -->
     <link rel="stylesheet" href="css/themes.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/modal.css" />
     <link rel="stylesheet" href="css/password-strength.css" />    <link rel="stylesheet" href="css/phrase-suggestions.css" />
     <link rel="stylesheet" href="css/keyboard-shortcuts.css" />
     <link rel="manifest" href="manifest.json" />
@@ -78,9 +79,10 @@
         
         <!-- Password Strength Meter -->
         <div id="strengthMeter" aria-live="polite" role="status"></div>
-        
-        <button id="generateBtn" aria-label="Generate password from phrase">Generate Password</button>
-        <button id="copyBtn" aria-label="Copy generated password to clipboard">Copy to Clipboard</button>        <button id="downloadBtn" aria-label="Download password cheat sheet PDF">Download Cheat Sheet PDF</button>
+          <button id="generateBtn" aria-label="Generate password from phrase">Generate Password</button>
+        <button id="copyBtn" aria-label="Copy generated password to clipboard">Copy to Clipboard</button>
+        <button id="shareBtn" aria-label="Share this example securely" title="Share example link (no passwords shared)" class="share-button-hidden">🔗 Share Example</button>
+        <button id="downloadBtn" aria-label="Download password cheat sheet PDF">Download Cheat Sheet PDF</button>
         <div id="passwordOutput" aria-live="polite" role="status" aria-atomic="true"></div>
         <hr style="margin:2rem 0 1rem 0; border:0; border-top:1px solid #e0e0e0;" aria-hidden="true" />        <footer role="contentinfo">
             <span id="footer-version" aria-live="polite"></span><br />
